fixed pom, rich faces

--- a/dvdb-ear/pom.xml
+++ b/dvdb-ear/pom.xml
@@ -18,7 +18,7 @@
 
 	<properties>
 		<ear.name>dvdb-application</ear.name>
-		<unpack>true</unpack>
+		<unpack>false</unpack>
 	</properties>
 
 	<build>
