--- a/pom.xml
+++ b/pom.xml
@@ -290,7 +290,7 @@
 				<groupId>org.jboss.seam</groupId>
 				<artifactId>jboss-seam-mail</artifactId>
 				<version>${seam.version}</version>
-			</dependency>		
+			</dependency>
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
 				<artifactId>jboss-seam-ui</artifactId>
@@ -432,11 +432,21 @@
 				<artifactId>richfaces-impl</artifactId>
 				<version>3.3.3.Final</version>
 			</dependency>
-		<dependency>
-			<groupId>commons-digester</groupId>
-			<artifactId>commons-digester</artifactId>
+			<dependency>
+				<groupId>org.richfaces.framework</groupId>
+				<artifactId>richfaces-impl</artifactId>
+				<version>3.3.3.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>org.richfaces.ui</groupId>
+				<artifactId>richfaces-ui</artifactId>
+				<version>3.3.3.Final</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-digester</groupId>
+				<artifactId>commons-digester</artifactId>
 				<version>2.0</version>
-		</dependency>
+			</dependency>
 			<dependency>
 				<groupId>opensymphony</groupId>
 				<artifactId>oscache</artifactId>
