--- a/pom.xml
+++ b/pom.xml
@@ -38,13 +38,13 @@
 		<repository>
 			<id>dvdb</id>
 			<name>Internal Releases</name>
-			<url>http://www.dvdb.org/nexus/content/repositories/releases</url>
+			<url>http://www.dvdb.org:8081/nexus/content/repositories/releases</url>
 		</repository>
 
 		<snapshotRepository>
 			<id>dvdb</id>
 			<name>Internal Snapshots</name>
-			<url>http://www.dvdb.org/nexus/content/repositories/snapshots</url>
+			<url>http://www.dvdb.org:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -462,6 +462,11 @@
 				<groupId>commons-httpclient</groupId>
 				<artifactId>commons-httpclient</artifactId>
 				<version>3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.jboss.cache</groupId>
+				<artifactId>jbosscache-core</artifactId>
+				<version>2.2.0.GA</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
