--- a/dvdb-ear/pom.xml
+++ b/dvdb-ear/pom.xml
@@ -119,6 +119,12 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>jboss-seam-jul</artifactId>
+					<groupId>org.jboss.seam</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
