--- a/dvdb-ejb/pom.xml
+++ b/dvdb-ejb/pom.xml
@@ -105,6 +105,12 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam-ui</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>jboss-seam-jul</artifactId>
+					<groupId>org.jboss.seam</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.json-lib</groupId>
