--- a/dvdb-ear/pom.xml
+++ b/dvdb-ear/pom.xml
@@ -46,12 +46,12 @@
 					<defaultLibBundleDir>lib</defaultLibBundleDir>
 
 					<modules>
-
-						<ejbModule>
-							<groupId>org.jboss.seam</groupId>
-							<artifactId>jboss-seam</artifactId>
-							<bundleDir>/lib</bundleDir>
-						</ejbModule>
+					
+<!--						<ejbModule>-->
+<!--							<groupId>org.jboss.seam</groupId>-->
+<!--							<artifactId>jboss-seam</artifactId>-->
+<!--							<bundleDir>/</bundleDir>-->
+<!--						</ejbModule>-->
 
 						<ejbModule>
 							<groupId>${pom.groupId}</groupId>
@@ -114,7 +114,13 @@
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
 			<artifactId>jboss-seam</artifactId>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.seam</groupId>
+			<artifactId>jboss-seam</artifactId>
 			<type>ejb</type>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.seam</groupId>
@@ -157,7 +163,7 @@
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-core</artifactId>
-		</dependency> 
+		</dependency>
 		<dependency>
 			<groupId>org.drools</groupId>
 			<artifactId>drools-compiler</artifactId>
