--- a/dvdb-ejb/pom.xml
+++ b/dvdb-ejb/pom.xml
@@ -116,6 +116,12 @@
 			<artifactId>json-lib</artifactId>
 			<classifier>jdk15</classifier>
 		</dependency>
+
+			<dependency>
+				<groupId>opensymphony</groupId>
+				<artifactId>quartz</artifactId>
+			</dependency>
+
 	</dependencies>
 
 
