Basics for dialog

--- a/dvdb-war/src/main/webapp/WEB-INF/web.xml
+++ b/dvdb-war/src/main/webapp/WEB-INF/web.xml
@@ -113,5 +113,16 @@
 		<url-pattern>*.xls</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>PrimeFaces Resource Servlet</servlet-name>
+		<servlet-class>org.primefaces.resource.ResourceServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>PrimeFaces Resource Servlet</servlet-name>
+		<url-pattern>/primefaces_resource/*</url-pattern>
+	</servlet-mapping>
+
+
 
 </web-app>
