--- a/dvdb-war/src/main/webapp/WEB-INF/web.xml
+++ b/dvdb-war/src/main/webapp/WEB-INF/web.xml
@@ -10,12 +10,12 @@
 
 	<context-param>
 		<param-name>facelets.DEVELOPMENT</param-name>
-		<param-value>true</param-value>
+		<param-value>false</param-value>
 	</context-param>
 
 	<context-param>
 		<param-name>facelets.REFRESH_PERIOD</param-name>
-		<param-value>2</param-value>
+		<param-value>-1</param-value>
 	</context-param>
 
 	<context-param>
