--- a/dvdb-war/src/main/webapp/WEB-INF/web.xml
+++ b/dvdb-war/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 
 	<context-param>
 		<param-name>facelets.DEVELOPMENT</param-name>
-		<param-value>false</param-value>
+		<param-value>true</param-value>
 	</context-param>
 
 	<context-param>
